--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "expo-constants": "~16.0.2",
     "expo-document-picker": "~12.0.2",
     "expo-font": "12.0.9",
+    "expo-image-picker": "^16.1.4",
     "expo-splash-screen": "0.27.5",
     "expo-status-bar": "1.12.1",
     "react": "18.2.0",
