Including android folder so EAS doesn't fail

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -109,9 +109,9 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace 'com.yourcompany.sampleapp'
+    namespace 'com.thaihoangphuc.languagelearningapp'
     defaultConfig {
-        applicationId 'com.yourcompany.sampleapp'
+        applicationId 'com.thaihoangphuc.languagelearningapp'
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
