--- a/app.json
+++ b/app.json
@@ -19,15 +19,17 @@
           "recordAudioAndroid": true
         }
       ],
-      "expo-build-properties",
-      {
-        "android": {
-          "compileSdkVersion": 34,
-          "targetSdkVersion": 34,
-          "buildToolsVersion": "34.0.0",
-          "kotlinVersion": "1.9.10"
+      [
+        "expo-build-properties",
+        {
+          "android": {
+            "compileSdkVersion": 34,
+            "targetSdkVersion": 34,
+            "buildToolsVersion": "34.0.0",
+            "kotlinVersion": "1.9.10"
+          }
         }
-      }
+      ]
     ],
     "ios": {
       "supportsTablet": true,
@@ -46,8 +48,6 @@
       },
       "permissions": [
         "RECORD_AUDIO",
-        "READ_EXTERNAL_STORAGE",
-        "WRITE_EXTERNAL_STORAGE",
         "android.permission.RECORD_AUDIO",
         "android.permission.MODIFY_AUDIO_SETTINGS"
       ]
@@ -56,6 +56,7 @@
       "favicon": "./assets/favicon.png"
     },
     "extra": {
+      "apiUrl": "http://localhost:8000",
       "eas": {
         "projectId": "e804fe48-4aed-47f6-a4e0-a26ecdec6bf5"
       }
