--- a/package.json
+++ b/package.json
@@ -23,14 +23,20 @@
     "axios": "^1.8.2",
     "expo": "^51.0.20",
     "expo-av": "~14.0.7",
+    "expo-build-properties": "~0.12.5",
     "expo-constants": "~16.0.2",
     "expo-doctor": "^1.13.5",
     "expo-document-picker": "~12.0.2",
+    "expo-file-system": "^18.1.11",
     "expo-font": "12.0.9",
     "expo-image": "^2.3.2",
     "expo-image-loader": "^5.1.0",
     "expo-image-picker": "^16.1.4",
+    "expo-intent-launcher": "^12.1.5",
+    "expo-media-library": "^17.1.7",
     "expo-modules-core": "^2.4.2",
+    "expo-permissions": "^14.4.0",
+    "expo-sharing": "^13.1.5",
     "expo-splash-screen": "0.27.5",
     "expo-status-bar": "1.12.1",
     "react": "18.2.0",
@@ -42,8 +48,7 @@
     "react-native-screens": "^3.37.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.2.0",
-    "svg": "^0.1.0",
-    "expo-build-properties": "~0.12.5"
+    "svg": "^0.1.0"
   },
   "devDependencies": {
     "@babel/core": "7.24.8",
