--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "react": "18.2.0",
     "react-native": "^0.74.3",
     "react-native-dev-menu": "^4.1.1",
+    "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.24.0",
+    "react-native-pdf": "^6.7.7",
     "react-native-reanimated": "^3.17.1",
     "react-native-safe-area-context": "^4.14.1",
     "react-native-screens": "^3.37.0",
